--- a/WarehouseTest.Server/appsettings.json
+++ b/WarehouseTest.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Warehouse": "Server=localhost,1433;Database=Warehouse;TrustServerCertificate=True;User Id=SA;Password=<YourStrong@Passw0rd>"
+  },
 }
