--- a/WarehouseTest.Server/WarehouseTest.Server.csproj
+++ b/WarehouseTest.Server/WarehouseTest.Server.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\warehousetest.client\warehousetest.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
